[gd_scene load_steps=9 format=2]

[ext_resource path="res://spoo_world/assets/img/fondo_level5.png" type="Texture" id=1]
[ext_resource path="res://spoo_world/assets/icon/spoo.png" type="Texture" id=2]
[ext_resource path="res://spoo_world/assets/icon/block_night.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/icon/moneda.png" type="Texture" id=4]
[ext_resource path="res://spoo_world/world/levels/level5.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 200, 200 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 200, 200 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 200, 200 )

[node name="level5" type="Node2D"]
script = ExtResource( 5 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 640.75, 400.125 )
scale = Vector2( 1.00195, 0.939918 )
texture = ExtResource( 1 )

[node name="personaje" type="Sprite" parent="."]
position = Vector2( 97, 405 )
scale = Vector2( 0.8125, 0.805 )
texture = ExtResource( 2 )

[node name="coin" type="Sprite" parent="."]
position = Vector2( 273, 437 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="coin2" type="Sprite" parent="."]
position = Vector2( 1002, 434 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="coin3" type="Sprite" parent="."]
position = Vector2( 1224, 432 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="coin4" type="Sprite" parent="."]
position = Vector2( 621, 449 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="BLock1" type="Button" parent="."]
margin_left = 25.0
margin_top = 434.0
margin_right = 177.0
margin_bottom = 585.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock1"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock2" type="Button" parent="."]
margin_left = 198.0
margin_top = 429.0
margin_right = 350.0
margin_bottom = 580.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock2"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock3" type="Button" parent="."]
margin_left = 378.0
margin_top = 450.0
margin_right = 530.0
margin_bottom = 601.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock3"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock4" type="Button" parent="."]
margin_left = 547.0
margin_top = 443.0
margin_right = 699.0
margin_bottom = 594.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock4"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock5" type="Button" parent="."]
margin_left = 732.0
margin_top = 461.0
margin_right = 884.0
margin_bottom = 612.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock5"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock6" type="Button" parent="."]
margin_left = 925.0
margin_top = 428.0
margin_right = 1077.0
margin_bottom = 579.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock6"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[node name="BLock7" type="Button" parent="."]
margin_left = 1145.0
margin_top = 434.0
margin_right = 1297.0
margin_bottom = 585.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="BLock7"]
margin_left = 51.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 93.0
text = "0"
align = 1
valign = 1

[connection signal="pressed" from="BLock1" to="." method="_on_BLock1_pressed"]
[connection signal="pressed" from="BLock2" to="." method="_on_BLock2_pressed"]
[connection signal="pressed" from="BLock3" to="." method="_on_BLock3_pressed"]
[connection signal="pressed" from="BLock4" to="." method="_on_BLock4_pressed"]
[connection signal="pressed" from="BLock5" to="." method="_on_BLock5_pressed"]
[connection signal="pressed" from="BLock6" to="." method="_on_BLock6_pressed"]
[connection signal="pressed" from="BLock7" to="." method="_on_BLock7_pressed"]
